--- a/Login.html
+++ b/Login.html
@@ -7,7 +7,7 @@
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
         <link href="https://fonts.googleapis.com/css2?family=Antic+Slab&family=Kalnia:wght@300&family=Kavivanar&family=Orbitron:wght@700&family=Raleway:wght@200&display=swap" rel="stylesheet">
         <title>Sinaturehome</title>
-        <link rel="icon" href="/images/logo.png">
+        <link rel="icon" href="/images/logo3.png">
         <link rel="stylesheet" href="style.css">
     </head>
 
