--- a/Rewards.html
+++ b/Rewards.html
@@ -8,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Antic+Slab&family=Kalnia:wght@300&family=Kavivanar&family=Orbitron:wght@700&family=Raleway:wght@200&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <title>Sinaturehome</title>
-        <link rel="icon" href="/images/logo.png"> 
+        <link rel="icon" href="/images/logo3.png"> 
     </head>
 
     <!--heading-->
