editted typo(About US) in navbar

--- a/PROMO.html
+++ b/PROMO.html
@@ -22,7 +22,7 @@
         <a class="active" href="/Promo.html">PROMO</a>
         <a href="/Cart.html">Cart</a>
         <a href="/Rewards.html">Rewards</a>
-        <a href="/About Us.html">About US</a>
+        <a href="/About Us.html">About Us</a>
     </nav>
 
     <body>
