--- a/About Us.html
+++ b/About Us.html
@@ -22,7 +22,7 @@
         <a href="/Promo.html">PROMO</a>
         <a href="/Cart.html">Cart</a>
         <a href="/Rewards.html">Rewards</a>
-        <a class="active" href="/About Us.html">About US</a>
+        <a class="active" href="/About Us.html">About Us</a>
     </nav>
 
     <body>
