--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
         <a href="/Promo.html">PROMO</a>
         <a href="/Cart.html">Cart</a>
         <a href="/Rewards.html">Rewards</a>
-        <a href="/About Us.html">About US</a>
+        <a href="/About Us.html">About Us</a>
     </nav>
 
     <body></body>
