--- a/Rewards.html
+++ b/Rewards.html
@@ -18,7 +18,7 @@
 
     <!--navigation bar-->
     <nav>
-        <a href="/Index.html">Home</a>
+        <a href="/mainpage.html">Home</a>
         <a href="/Promo.html">PROMO</a>
         <a href="/Cart.html">Cart</a>
         <a class="active" href="Rewards.html">Rewards</a>
