changed the colours of the vouchers to better fit the aesthetics

--- a/Rewards.html
+++ b/Rewards.html
@@ -81,6 +81,6 @@
                 <!-- This is where the claimed vouchers will be displayed -->
             </ul>
         </div>
-        <script src="Index.js"></script>
+        <script src="rewards-vouchers.js"></script>
     </body>
 </html>
