--- a/Cart.html
+++ b/Cart.html
@@ -26,6 +26,17 @@
     </nav>
 
     <body>
+        <div id="cart">
+            <h2>Your Shopping Cart</h2>
+            <ul id="cart-items">
+                <!-- Cart items will be dynamically added here -->
+            </ul>
+        </div>
 
+        <div class="total-display">
+            <p>Total: $<span id="total-price">0</span></p>
+        </div>
+          
+        <script src="Cart.js"></script>
     </body>
 </html>
