changed the colour cuz i forgot

--- a/Cart.html
+++ b/Cart.html
@@ -34,6 +34,8 @@
         </div>
 
         <div class="total-display">
+            <p>Discount: 0%</p>
+            <br>
             <p>Total: $<span id="total-price">0</span></p>
         </div>
           
