--- a/Cart.html
+++ b/Cart.html
@@ -40,5 +40,7 @@
         </div>
         
         <script src="cart.js"></Script>
+        <script src="mainpage.html"></script>
+        
     </body>
 </html>
