editted the rewards page so all the vouchers are different

--- a/Rewards.html
+++ b/Rewards.html
@@ -26,6 +26,7 @@
     </nav>
 
     <body>
+        <!--dropdown button-->
         <div class="dropdown">
             <button class="dropdown-button">Vouchers</button>
             <div class="dropdown-content">
@@ -34,6 +35,7 @@
             </div>
         </div>
 
+        <!--claim vouchers section-->
         <div class="claim-section" id="claim-section">
             <h1>Claim Vouchers</h1>
 
@@ -50,28 +52,27 @@
             </div>
 
             <div class="vouchers" id="voucher3">
-                <h2>Electronics Discount</h2>
-                <p>Use this voucher to get a discount on all Electronic products.</p>
+                <h2>Jewelery Discount</h2>
+                <p>Use this voucher to get a discount on all Jewelery products.</p>
                 <button class="claim-button" onclick="claimVoucher(this, 'voucher3')">Claim <span class="discount" id="discount3"></span> Discount Voucher</button>
             </div>
 
             <div class="vouchers" id="voucher4">
-                <h2>Electronics Discount</h2>
-                <p>Use this voucher to get a discount on all Electronic products.</p>
+                <h2>Women's Clothing Discount</h2>
+                <p>Use this voucher to get a discount on all Women's clothing.</p>
                 <button class="claim-button" onclick="claimVoucher(this, 'voucher4')">Claim <span class="discount" id="discount4"></span> Discount Voucher</button>
             </div>
 
             <div class="vouchers" id="voucher5">
-                <h2>Electronics Discount</h2>
-                <p>Use this voucher to get a discount on all Electronic products.</p>
+                <h2>Men's Clothing Discount</h2>
+                <p>Use this voucher to get a discount on all Men's clothing.</p>
                 <button class="claim-button" onclick="claimVoucher(this, 'voucher5')">Claim <span class="discount" id="discount5"></span> Discount Voucher</button>
             </div>
-
-            <!-- Add more vouchers div as needed -->
         </div>
 
         <hr>
 
+        <!--users' vouchers section-->
         <div class="voucher-section">
             <h1>Your Vouchers</h1>
 
