Media query and renaming it to About only

--- a/Rewards.html
+++ b/Rewards.html
@@ -22,7 +22,7 @@
         <a href="/Promo.html">PROMO</a>
         <a href="/Cart.html">Cart</a>
         <a class="active" href="Rewards.html">Rewards</a>
-        <a href="/About Us.html">About Us</a>
+        <a href="/About.html">About Us</a>
     </nav>
 
     <body>
