--- a/Cart.html
+++ b/Cart.html
@@ -22,7 +22,7 @@
         <a href="/Promo.html">PROMO</a>
         <a class="active" href="/Cart.html">Cart</a>
         <a href="/Rewards.html">Rewards</a>
-        <a href="/About Us.html">About Us</a>
+        <a href="/About.html">About Us</a>
     </nav>
 
     <body>
