--- a/Rewards.html
+++ b/Rewards.html
@@ -84,4 +84,8 @@
         </div>
         <script src="rewards-vouchers.js"></script>
     </body>
+    <a href="#" class="to-top">
+        <i class='bx bx-up-arrow-alt'></i>
+  </a>
+  <script src="totop.js"></script>
 </html>
