--- a/PROMO.html
+++ b/PROMO.html
@@ -18,7 +18,7 @@
 
     <!--navigation bar-->
     <nav>
-        <a href="/mainpage.html">Home</a>
+        <a href="/index.html">Home</a>
         <a class="active" href="/Promo.html">PROMO</a>
         <a href="/Cart.html">Cart</a>
         <a href="/Rewards.html">Rewards</a>
