Update and rename index.html to mainpage.html

--- a/mainpage.html
+++ b/mainpage.html
@@ -18,7 +18,7 @@
 
 <!--navigation bar-->
 <nav>
-    <a class="active" href="/index.html">Home</a>
+    <a class="active" href="/mainpage.html">Home</a>
     <a href="/Promo.html">PROMO</a>
     <a href="/Cart.html">Cart</a>
     <a href="/Rewards.html">Rewards</a>
