--- a/Cart.html
+++ b/Cart.html
@@ -36,7 +36,9 @@
         </div>
 
         <div class="total-display">
+            
             <p>Total: $<span id="total-price">0</span></p>
+            <p id="discount"></p>
         </div>
         
         <script src="cart.js"></Script>
