--- a/About.html
+++ b/About.html
@@ -17,7 +17,7 @@
     </header>
 
     <!--navigation bar-->
-    <nav>
+    <nav class="About">
         <a href="mainpage.html">Home</a>
         <a href="/Promo.html">PROMO</a>
         <a href="/Cart.html">Cart</a>
