--- a/mainpage.html
+++ b/mainpage.html
@@ -57,7 +57,9 @@
             class="add-to-cart" data-name="__PRODUCT_NAME__" data-price="__PRODUCT_PRICE__">Add to Cart</button>
         </div>
     </template>
-
+<a href="#" class="to-top">
+            <i class='bx bx-up-arrow-alt'></i>
+      </a>
     <script src="index.js"></script>
     <script src="totop.js"></script>
 </body>
