--- a/About.html
+++ b/About.html
@@ -19,10 +19,10 @@
     <!--navigation bar-->
     <nav class="About">
         <a href="mainpage.html">Home</a>
-        <a href="/Promo.html">PROMO</a>
-        <a href="/Cart.html">Cart</a>
-        <a href="/Rewards.html">Rewards</a>
-        <a class="active" href="/About Us.html">About Us</a>
+        <a href="Promo.html">PROMO</a>
+        <a href="Cart.html">Cart</a>
+        <a href="Rewards.html">Rewards</a>
+        <a class="active" href="About Us.html">About Us</a>
     </nav>
 
     <body style="display:flex;
