--- a/Rewards.html
+++ b/Rewards.html
@@ -18,11 +18,11 @@
 
     <!--navigation bar-->
     <nav>
-        <a href="/mainpage.html">Home</a>
-        <a href="/Promo.html">PROMO</a>
-        <a href="/Cart.html">Cart</a>
+        <a href="mainpage.html">Home</a>
+        <a href="Promo.html">PROMO</a>
+        <a href="Cart.html">Cart</a>
         <a class="active" href="Rewards.html">Rewards</a>
-        <a href="/About.html">About Us</a>
+        <a href="About.html">About Us</a>
     </nav>
 
     <body>
