--- a/mainpage.html
+++ b/mainpage.html
@@ -18,11 +18,11 @@
 
 <!--navigation bar-->
 <nav>
-    <a class="active" href="/mainpage.html">Home</a>
-    <a href="/Promo.html">PROMO</a>
-    <a href="/Cart.html">Cart</a>
-    <a href="/Rewards.html">Rewards</a>
-    <a href="/About.html">About Us</a>
+    <a class="active" href="mainpage.html">Home</a>
+    <a href="Promo.html">PROMO</a>
+    <a href="Cart.html">Cart</a>
+    <a href="Rewards.html">Rewards</a>
+    <a href="About.html">About Us</a>
 </nav>
 
 <body class="mainpage" style="margin-top: 140px;">
