--- a/About.html
+++ b/About.html
@@ -19,7 +19,7 @@
     <!--navigation bar-->
     <nav class="About">
         <a href="mainpage.html">Home</a>
-        <a href="Promo.html">PROMO</a>
+        <a href="PROMO.html">PROMO</a>
         <a href="Cart.html">Cart</a>
         <a href="Rewards.html">Rewards</a>
         <a class="active" href="About.html">About Us</a>
