--- a/PROMO.html
+++ b/PROMO.html
@@ -19,7 +19,7 @@
     <!--navigation bar-->
     <nav>
         <a href="mainpage.html">Home</a>
-        <a class="active" href="Promo.html">PROMO</a>
+        <a class="active" href="PROMO.html">PROMO</a>
         <a href="Cart.html">Cart</a>
         <a href="Rewards.html">Rewards</a>
         <a href="About Us.html">About Us</a>
