--- a/Rewards.html
+++ b/Rewards.html
@@ -19,7 +19,7 @@
     <!--navigation bar-->
     <nav>
         <a href="mainpage.html">Home</a>
-        <a href="Promo.html">PROMO</a>
+        <a href="PROMO.html">PROMO</a>
         <a href="Cart.html">Cart</a>
         <a class="active" href="Rewards.html">Rewards</a>
         <a href="About.html">About Us</a>
