--- a/PROMO.html
+++ b/PROMO.html
@@ -30,7 +30,7 @@
             
             <div class="col-promo">
                 
-                <img src="/images/7daysaweeksale.jpg" style="width: 600px; height: 900px";
+                <img src="images/7daysaweeksale.jpg" style="width: 600px; height: 900px";
                 >
                 <h2 style="color: darkorange;"><b>SUPER LIMITED SALE</b></h2>
                 <p>Details:<br>spend a minimum of$200 on any products and stand a get $7 off your purchas<br><br><br><br><br><br>
